default footside that works

--- a/_includes/snow-6.html
+++ b/_includes/snow-6.html
@@ -11,8 +11,8 @@
     <input type="radio" name="no-bounce-pattern" value="c" id="no-bounce-pattern-c" onchange="update()"> <label for="no-bounce-pattern-c">c</label>
     <br>
     Footside
-    <input type="radio" name="no-bounce-footside" value="no" id="no-bounce-no-footside" onchange="update()" checked> <label for="no-bounce-no-footside">no</label>
-    <input type="radio" name="no-bounce-footside" value="nothing" id="no-bounce-no-footside-stitch" onchange="update()"> <label for="no-bounce-no-footside-stitch">do nothing</label>
+    <input type="radio" name="no-bounce-footside" value="no" id="no-bounce-no-footside" onchange="update()"> <label for="no-bounce-no-footside">no</label>
+    <input type="radio" name="no-bounce-footside" value="nothing" id="no-bounce-no-footside-stitch" onchange="update() checked"> <label for="no-bounce-no-footside-stitch">do nothing</label>
     <input type="radio" name="no-bounce-footside" value="uc" id="no-bounce-footside-stitch" onchange="update()"> <label for="no-bounce-footside-stitch">under construction</label>
     <br>
     Swatch size:
