--- a/_includes/snow-6.html
+++ b/_includes/snow-6.html
@@ -66,6 +66,6 @@
             document.getElementById("hex_no_bounce_link").href = "https://d-bl.github.io/GroundForge/droste" + q + droste2 + droste3
             console.log(q)
         }
-        update()
+        no_bounce_update()
     </script>
 </form>
