low hanging fruit of the review

--- a/_includes/snow-6-bounce2.html
+++ b/_includes/snow-6-bounce2.html
@@ -18,7 +18,7 @@
     </span>
     <input type="text" id="bounce-blobs" name="blobs" width="35" spellcheck="false" onchange="update_bounce()" value="lcr,rccl,lcr">
     <a id="bounce-link" href="#" target="_blank">
-        <button type="button">Go</button>
+        <button type="button">show diagram</button>
     </a>
     <script>
         function update_bounce() {
