--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -11,14 +11,14 @@
 Snow:<br>
 <a href="/MAE-gf/docs/counting-snow">Counting families</a><br>
 <a href="/MAE-gf/docs/snow-stitches">Stitches</a><br>
-<a href="/MAE-gf/docs/snowflakes">Miscellaneous</a><br>
+<a href="/MAE-gf/docs/snowflakes">Examples</a><br>
+<a href="/MAE-gf/docs/spiders">Spider exampless</a><br>
 <br>
 <a href="/MAE-gf/docs/nets">Net Grounds</a><br>
 <a href="/MAE-gf/docs/ec">Embellished clothwork</a><br>
 <a href="/MAE-gf/docs/roses">Rose Grounds</a><br>
 <a href="/MAE-gf/docs/bias">Bias Grounds</a><br>
 <a href="/MAE-gf/docs/paris">Paris Grounds</a><br>
-<a href="/MAE-gf/docs/spiders">Spiders</a><br>
 <a href="/MAE-gf/docs/tria">Triangular Grounds</a><br>
 <a href="/MAE-gf/docs/fish">Fish</a><br>
 <a href="/MAE-gf/docs/lotus">Lotus and Lattice</a><br>
