--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -12,7 +12,7 @@ Snow:<br>
 <a href="/MAE-gf/docs/counting-snow">Counting families</a><br>
 <a href="/MAE-gf/docs/snow-stitches">Stitches</a><br>
 <a href="/MAE-gf/docs/snowflakes">Examples</a><br>
-<a href="/MAE-gf/docs/spiders">Spider exampless</a><br>
+<a href="/MAE-gf/docs/spiders">Spider examples</a><br>
 <br>
 <a href="/MAE-gf/docs/nets">Net Grounds</a><br>
 <a href="/MAE-gf/docs/ec">Embellished clothwork</a><br>
