--- a/_includes/snow-6.html
+++ b/_includes/snow-6.html
@@ -1,7 +1,7 @@
 <head>
     <script src="snow-6.js" type="text/javascript"></script>
     <!-- dirty trick to test stand alone,
-     included in markdown you still need to include the script
+         in markdown you have to include both js and html
      -->
 </head>
 
