do nothing still mentioned a third type of footside

--- a/_includes/snow-6.html
+++ b/_includes/snow-6.html
@@ -6,17 +6,17 @@
 </head>
 
 <form>
-    <label for="no-bounce-blobs">Blobs</label>
+    <label for="no-bounce-blobs">Blobs:</label>
     <input type="text" id="no-bounce-blobs" name="no-bounce-blobs" width="35" spellcheck="false" onchange="no_bounce_update()" value="rclc,ctc,ctc,crcl">
-    starts
+    start
     <input type="radio" name="no_bounce_first_blob" value="l" id="no_bounce_first_blobLeft" onchange="no_bounce_update()"> <label for="no_bounce_first_blobLeft">left</label>
     <input type="radio" name="no_bounce_first_blob" value="r" id="no_bounce_first_blobRight" checked onchange="no_bounce_update()"> <label for="no_bounce_first_blobRight">right</label>.
     <br>
-    Variant
+    Variant:
     <input type="radio" name="no-bounce-pattern" value="diamond" id="no-bounce-pattern-diamond" onchange="no_bounce_update()" checked> <label for="no-bounce-pattern-diamond">diamond</label>
     <input type="radio" name="no-bounce-pattern" value="square" id="no-bounce-pattern-square" onchange="no_bounce_update()"> <label for="no-bounce-pattern-square">square</label>
     <br>
-    Footside
+    Footside:
     <input type="radio" name="no-bounce-footside" value="nothing" id="no-bounce-no-footside-stitch" onchange="no_bounce_update()" checked> <label for="no-bounce-no-footside-stitch">do nothing</label>
     <input type="radio" name="no-bounce-footside" value="twist" id="no-bounce-footside-twist" onchange="no_bounce_update()"> <label for="no-bounce-footside-twist">just twist</label>
     <br>
